--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
         <div class="container">
             <h2>Contact Design Me 256</h2>
             <p>We'd love to hear from you! Whether you are inquiring about our crochet garments, custom designs, or just want to say hello, feel free to reach out. </p>
-            <form action="https://formsubmit.co/2f18897a769fdbf3d5f114bd6f3f6f74" method="POST">
+            <form action="https://formsubmit.co/sakienta@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="New Site Form Contact Message">
                 
                 <input type="hidden" name="_next" value="https://design-me-256.my-style.in/Thankyou.html ">
