--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
         <div class="container">
             <h2>Featured Products</h2>
             <div class="products-grid">
+
+                <div class="product">
+                    <img src="DesignMeImages/IMG-20241029-WA0006.jpg" alt="Product 2">
+                    <h3>The Oreo Crotchet Purse</h3>
+                    <p>Ugx 150,000/-</p>
+                    <button class="cta-button"><a href="https://wa.me/+256 703 876037">Order Now</a></button>
+                </div>
+
                 <div class="product">
                     <img src="DesignMeImages/designMe_05.jpg" alt="Product 1">
                     <h3>Beach Suit</h3>
